--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,21 +14,25 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
+    
     - uses: actions/checkout@v4
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
+      
+  secuirty-check:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Trivy Installation
       run: |
         sudo apt-get install -y wget apt-transport-https gnupg lsb-release
@@ -45,10 +49,4 @@ jobs:
       
     - name: Gitleaks Code Scan
       run: gitleaks detect source . -r gitleaks-report.json -f json
-
-    - name: Upload Build Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: java-app
-        path: target/*.jar
 
