Update Gitleaks command to include --no-git option

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,5 +40,6 @@ jobs:
       run: sudo apt install gitleaks -y
       
     - name: Gitleaks Code Scan
-      run: gitleaks detect source . -r gitleaks-report.json -f json
+      run: gitleaks detect --source . -r gitleaks-report.json -f json --no-git
+      
 
