--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    - uses: actions/checkout@v4
     - name: Trivy Installation
       run: |
         sudo apt-get install -y wget apt-transport-https gnupg lsb-release
@@ -40,6 +41,6 @@ jobs:
       run: sudo apt install gitleaks -y
       
     - name: Gitleaks Code Scan
-      run: gitleaks detect --source . -r gitleaks-report.json -f json --no-git
+      run: gitleaks detect --source . -r gitleaks-report.json -f json
       
 
