--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     
     - uses: actions/checkout@v4
@@ -22,7 +22,7 @@ jobs:
       run: mvn -B package --file pom.xml
       
   secuirty-check:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: build
     steps:
     - uses: actions/checkout@v4
